trunk/Archive/748278417429e2ad9067d3821c6863ff-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:2:11: error: ‘::main’ must return ‘int’
 void main(){
           ^
main.cpp: In function ‘int main()’:
main.cpp:8:6: error: cannot convert ‘int*’ to ‘int**’ in assignment
 a[0] = a3;
      ^
main.cpp:9:6: error: cannot convert ‘int*’ to ‘int**’ in assignment
 a[1] = a4;
      ^
main.cpp:11:22: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
 printf("%d",*(++(*a)));
                      ^
